# mega

./: pyproject.toml
src/mega/: client.py
